###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "flower",
    version = "0.1.0",
)

# Bazel C++ rules（几乎所有 C++ 项目都需要）
bazel_dep(name = "rules_cc", version = "0.2.9")

############################
# abseil-cpp（原 http_archive）
############################
bazel_dep(
    name = "abseil-cpp",
    version = "20260107.0",  # 稳定可用版本
)

############################
# tcmalloc（原 local_repository）
############################
bazel_dep(name = "tcmalloc")
local_path_override(
    module_name = "tcmalloc",
    path = "/Users/sean/Project/tcmalloc",
)
